# Cmake_course

./: .gitmodules
1_helloworld/: CMakeLists.txt  main.c
2_BasicProject/: CMakeLists.txt  lib.c  lib.h  main.c
3_intermediate_project/: CMakeLists.txt
3_intermediate_project/app/: CMakeLists.txt
3_intermediate_project/src/my_lib/: CMakeLists.txt
4_variables/: CMakeLists.txt  Makefile
4_variables/app/: main.c
4_variables/src/my_lib/: CMakeLists.txt  my_lib.c
5_configure_file/configured/: CMakeLists.txt
5_configure_file/src/my_lib/: CMakeLists.txt
6_sourceandheader/: CMakeLists.txt
6_sourceandheader/app/: CMakeLists.txt  main.cpp
6_sourceandheader/src/my_lib/: CMakeLists.txt  my_lib.cpp
7_externalgit/: CMakeLists.txt
7_externalgit/app/: CMakeLists.txt  main.cpp
7_externalgit/cmake/: AddGitSubmodule.cmake
7_externalgit/configured/: config.hpp.in
7_externalgit/src/my_lib/: my_lib.h
